syntax = "proto3";

package msg;

message ClientMsg {
	int32 msg_id = 1;
	int32 status_code = 2;
	string msg = 3;
}